[metadata]
name = queueit-knownuserv3
version = 0.0.4
description = KnownUser python sdk for python >=3.6 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/OneOf-Inc/KnownUser.V3.Python
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = SDK
packages = find:
python_requires = >=3.6

[options.packages.find]
where = SDK
